--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,7 +1,15 @@
 
 @font-face {
+  font-family: Roboto;
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Roboto.woff2') format('woff2');
+}
+
+@font-face {
   font-family: 'Futura New';
-  font-display: fallback;
+  font-display: swap;
   font-style: normal;
   font-weight: 400;
   src: local('Futura New'),
